# self_contained_c_xyz

./: CMakeLists.txt  README.md  _fe_warp_affine.h  libxyzsphinxad.dylib  p-ps_plus-debug  ps-debug  ps_plus-debug  ps_plus.h
Attempt1/: CMakeLists.txt  _fe_warp.h  _fe_warp_inverse_linear.h  _fe_warp_piecewise_linear.h  batch_plus.h  cmn_init_values.txt  data.h  ps.c  ps.h  ps_plus.cpp  race_conditions.txt  s-ps_plus-debug  valgrind_output_for_continuous.txt
Attempt1/ps_clli_checks/: batch.txt  commands.txt  output.txt
Attempt1/test_data/allowed1_philip/Temp_990ba583-5249-41f3-8d42-0617f9eea6cd/: forced_align_4311b957-22a7-446c-85d9-d154d4156d02_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_a3ecf04d-a77a-4269-9eb5-395f8dfbdd8a_allowed1_philip_fixed_trimmed.wav.jsgf
Attempt1/test_data/allowed1_philip_allowed/grammar/: forced_align_001c56aa-f03b-4550-b3d5-d55aa960b63a_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_03274310-3e34-401d-b7cf-6adb47a64366_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_0542057c-8fd9-4110-a279-39198b82cf3e_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_059b8c7e-cdbf-44ba-98a4-c33205ea7bb6_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_0652ec16-5cb1-493e-8a9c-36e72d0fc922_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_06e49340-84ac-4052-ac2b-ab58dfd62afa_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_075b90dd-bd4f-45e6-839c-83eb2ffb360e_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_07bb092d-37f7-4eba-b660-8625283839e3_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_092a9232-c8e2-4607-8efa-a4ed00511e61_allowed1_philip_fixed_trimmed.wav.jsgf  forced_align_0a1c0b7f-63ff-4850-a282-efd0fae87d70_allowed1_philip_fixed_trimmed.wav.jsgf  (+272 more)
Attempt1/test_data/dictionaries/: phonemes
Attempt1/xyzpocketsphinx/include/: Makefile  Makefile.in  config.h  pocketsphinx.h  ps_lattice.h  ps_mllr.h
Attempt1/xyzpocketsphinx/src/: Makefile
Attempt1/xyzsphinxbase/include/: Makefile  Makefile.am  Makefile.in  config.h
Attempt2/: Android_compilation.txt  CMakeCache.txt  CMakeLists.txt  batch_plus.h  c_demo.cpp  c_demo_exec.cpp  cmake-variants.json  data.h  data.hpp  ios.toolchain.instructions.txt  ps_plus.cpp
Attempt2 (copy)/xyzpocketsphinx/: configure.ac
Attempt2 (copy)/xyzpocketsphinx/include/: ps_lattice.h
Attempt2 (copy)/xyzpocketsphinx/model/: Makefile.in
Attempt2/android-stdioext/: fmemopen.h
Attempt2/build2/: cmake_install.cmake  libps_plus.dylib
Attempt2/build2/xyzcrossplatform/: Makefile
Attempt2/build2/xyzpocketsphinx/: cmake_install.cmake
Attempt2/build2/xyzsphinxbase/: cmake_install.cmake  libxyzsphinxbase.dylib
Attempt2/ios/: cmake_install.cmake
Attempt2/ios/Release-iphonesimulator/: 9C1FE855-61E2-3A55-AD71-AC601FB00F6B.bcsymbolmap  libps_plus.dylib
Attempt2/ios/ps_plus.xcodeproj/: project.pbxproj
Attempt2/ios/xyzcrossplatform/: cmake_install.cmake
Attempt2/ios/xyzsphinxbase/: cmake_install.cmake
Attempt2/ios_build/: cmake_install.cmake
Attempt2/ios_build/CMakeScripts/: ReRunCMake.make
Attempt2/ios_build/Release-iphoneos/: libps_plus.dylib
Attempt2/ios_build/xyzsphinxbase/: cmake_install.cmake
Attempt2/xyzcrossplatform/: CMakeLists.txt  crossplatform.c
Attempt2/xyzcrossplatform/android/: getline.c
Attempt2/xyzcrossplatform/windows/: fmemopen.c
Attempt2/xyzpocketsphinx/: CMakeLists.txt  config.status  configure  libtool  xyzpocketsphinx.pc
Attempt2/xyzpocketsphinx/autom4te.cache/: traces.1
Attempt2/xyzpocketsphinx/doc/: Makefile
Attempt2/xyzpocketsphinx/test/: Makefile
Attempt2/xyzsphinxbase/: CMakeLists.txt  configure.ac
Attempt2/xyzsphinxbase/src/: CMakeLists.txt  Makefile
Go_Attempt1/: CMakeLists.txt
Go_Attempt1/flutter_pron/: README.md  go.mod  go.sum  instructions.txt  libpron.h  main.go
Go_Attempt1/pron/: combiner.go  combiner_test.go  config.go  config_test.go  debug.go  go.mod  go.sum  grammar.go  grammar_test.go  listen.go  listen_test.go  phtoa.go  phtoa_test.go  prune.go  release.go  savedGrammar.txt  syllables.go  testCasing.go  testCasingNot.go  timeAligner.go  timeAligner_test.go  trim.go
Go_Attempt1/pron/test/: psOutfile1.txt  psOutfile2.txt
Go_Attempt1/ps_plus/: CMakeLists.txt  ps_plus.cpp
Go_Attempt1/ps_plus/.build/: Makefile
Go_Attempt1/ps_plus/xyzcrossplatform/: crossplatform.h
Go_Attempt1/scanScheduler/: batch.go  debug.go  go.mod  go.sum  logger.go  release.go  scanScheduler.go  scheduler_test.go  testCasing.go  testCasingNot.go
Go_Attempt1/xyz_plus/: CMakeLists.txt  go.mod  xyz_plus.go
Go_xyz_plus/: CMakeLists.txt  build_native_plugin.sh  build_plugin.go  notes.txt
Go_xyz_plus/caller_plus/: CMakeLists.txt  Instructions.txt  build_native_plugin.sh  config.json  data.go  go.mod  main.go  strings.go
Go_xyz_plus/ps_plus/: CMakeLists.txt  README.md  exports.def
Go_xyz_plus/ps_plus/.build/: cmake_install.cmake
ffigen_app/src/: CMakeLists.txt  CMakeLists_ffigen_app.txt  c_demo.cpp  c_demo_ffi.h  data.hpp  ps_plus.cpp  ps_plus.h
ffigen_app/src/aside_ps_library/: ps_plus_original.h
ffigen_app/src/xyzcrossplatform/: CMakeLists.txt  cmake_install.cmake
ffigen_app/src/xyzpocketsphinx/: CMakeLists.txt  xyzpocketsphinx.pc.in
ffigen_app/src/xyzsphinxbase/: CMakeLists.txt
ffigen_app2/src/: CMakeLists.txt  ffigen_app2.c
ffigen_cmake/src/: CMakeLists.txt  a.c  a.h  a_exec.c  ffigen_cmake.c  ffigen_cmake.h
flutter_demo2/libs/: CMakeCache.txt  CMakeLists copy.txt  CMakeLists.txt  README.md  c_demo.cpp  cmake_install.cmake
flutter_demo2/libs/CMakeScripts/: ReRunCMake.make
flutter_demo2/libs/ps_plus.xcodeproj/: project.pbxproj
flutter_demo2/libs/xyzcrossplatform/: crossplatform.c  crossplatform.h
flutter_demo2/libs/xyzpocketsphinx/: CMakeLists.txt  Makefile.in  cmake_install.cmake
flutter_demo2/libs/xyzsphinxbase/: CMakeLists.txt  cmake_install.cmake
flutter_plugin3/libs/xyzcrossplatform/: CMakeLists.txt  crossplatform.c
flutter_plugin3/libs/xyzpocketsphinx/: CMakeLists.txt  Makefile.am
flutter_plugin3/libs/xyzsphinxbase/: CMakeLists.txt
xyzpocketsphinx/src/programs/: Makefile.am
(+2510 files in other folders)
